# history-vs-hype

./: .env.example  .gitignore  .mcp.json  AGENTS.md  BACKUP-GUIDE.md  CLAUDE.md  MASTER_INDEX.md  REWRITE-PRIORITY-ANALYSIS.md  START-HERE.md  SYSTEM-DELIVERED.md  VERIFIED-WORKFLOW-QUICK-REFERENCE.md  VOICE-GUIDE.md  YOUTUBE-TRANSCRIPT-SETUP.md  pyproject.toml
.claude/: ACADEMIC-PEER-REVIEW-PROTOCOL.md  AGENT-IMPROVEMENTS-2025.md  AGENT-UPDATE-2025-01-18.md  AGENT-UPDATE-PLAN.md  COMMENT-RESPONSE-STRATEGY.md  COMPREHENSIVE-OUTLIER-RESEARCH-JAN-2026.md  CORE-WORKFLOW-SCRIPTWRITING-FACTCHECKING.md  FOLDER-STRUCTURE-GUIDE.md  NOTEBOOKLM-PUBLIC-COMMUNICATION-RESEARCH-PLAN.md  OUTLIER-TOPIC-IDEAS.md  README.md  SESSION_SUMMARY.md  SIMPLE_WORKFLOW.md  SKILL.md  SKILLS_GUIDE.md  TROUBLESHOOTING.md  USER-PREFERENCES.md  VERIFIED-CLAIMS-DATABASE.md  settings.local.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.5-MILESTONE-AUDIT.md  v1.6-MILESTONE-AUDIT.md  v5.0-MILESTONE-AUDIT.md  v5.1-MILESTONE-AUDIT.md  v7.0-MILESTONE-AUDIT.md
_archive-old/: PROJECT-CLEANUP-PROPOSAL.md  WORKFLOW-IMPROVEMENTS-PROPOSAL.md  WORKFLOW-UPGRADE-SUMMARY.md
archive/: compass_artifact_wf-040f9285-ad0a-40a9-9d96-460a01ed5eea_text_markdown.md  compass_artifact_wf-0b033558-caba-4773-a3e2-45b3ee1512f4_text_markdown.md  compass_artifact_wf-141e711f-4ffa-421c-83f0-7bc44ee39046_text_markdown.md  compass_artifact_wf-19d38bd9-e5c2-4e3a-ac20-78dc3034774a_text_markdown.md  compass_artifact_wf-1a3453e6-585a-4306-9638-2d2a858dbc3d_text_markdown.md  compass_artifact_wf-420e9f26-d972-4a1b-a6ae-acb34e301264_text_markdown.md  compass_artifact_wf-55e76f69-6355-4d08-9566-d5d7a3819181_text_markdown.md  compass_artifact_wf-5cf9381a-3b4d-4f45-96e1-6b3cf5d0083f_text_markdown.md  compass_artifact_wf-6f949dd8-91c8-4d45-ba32-40818916c200_text_markdown.md  compass_artifact_wf-76e8d4cb-ad57-403e-ae8d-8f55616b2683_text_markdown.md  compass_artifact_wf-b15e1fcc-64dc-4ce6-b634-2e2eb8131e77_text_markdown(1).md  compass_artifact_wf-bade1768-389d-4307-a138-3572c54a9dbc_text_markdown.md  compass_artifact_wf-c412ce60-e755-4b97-86ae-1b56d42a334b_text_markdown.md  compass_artifact_wf-d33675ec-f0a3-4ba1-b7ac-1d5e9e566fc2_text_markdown.md  (+7 more)
(+1655 files in other folders)
