[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "history-vs-hype-tools"
version = "5.1.0"
description = "Production tooling for History vs Hype YouTube channel"
requires-python = ">=3.11"
dependencies = [
    # YouTube Analytics API (required — no feature flag)
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    # Anthropic (required for notebooklm_bridge.py — no feature flag)
    "anthropic>=0.18.0",
]

[project.optional-dependencies]
# pip install -e .[youtube]
youtube = [
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
]

# pip install -e .[intel]
intel = [
    "feedparser>=6.0.0",
    "requests>=2.28.0",
]

# pip install -e .[nlp]
nlp = [
    "spacy>=3.8",
    "textstat>=0.7.3",
    "srt>=3.5.0",
]

# pip install -e .[discovery]
discovery = [
    "pyppeteer>=1.0.2",
    "pyppeteer-stealth>=2.7.4",
    "scrapetube>=2.3.4",
    "trendspyg>=0.1.0",
    "jinja2>=3.1.0",
]

# pip install -e .[translation]
translation = [
    "requests>=2.28.0",
    "googletrans>=4.0.0",
    "deep-translator>=1.11.0",
]

# pip install -e .[thumbnails]
thumbnails = [
    "imagehash>=4.3.0",
]

# pip install -e .[dev]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

# pip install -e .[test]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

# pip install -e .[all] — convenience for full install
all = [
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "anthropic>=0.18.0",
    "feedparser>=6.0.0",
    "requests>=2.28.0",
    "spacy>=3.8",
    "textstat>=0.7.3",
    "srt>=3.5.0",
    "pyppeteer>=1.0.2",
    "pyppeteer-stealth>=2.7.4",
    "scrapetube>=2.3.4",
    "trendspyg>=0.1.0",
    "jinja2>=3.1.0",
    "googletrans>=4.0.0",
    "deep-translator>=1.11.0",
    "imagehash>=4.3.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
